Fix CORS origin and credentials v2